@@ -12,6 +12,7 @@ Changelog for 1.3.23
 * Fixed action not found on redirect (Chris T, h/t Brian W)
 * Fixed issues upgrading from 1.2 if email and bcc are filled in (Chris T)
 * Fixed error exporting aging to csv (Havard S, h/t Nick P, 3559403)
+* Fixed receipt reversal screen erroring (Chris T, h/t Nick P)
 
 Chris T is Chris Travers
 Havard S is Havard Sorli
